--- a/_includes/h1.html
+++ b/_includes/h1.html
@@ -1,11 +1,8 @@
 					<h1>{{ page.title }}</h1>
+					{% if page.support %} 
+						<p class="badge badge-info pull-right">Support: Opera {{ page.support }}+</p>
+					{% endif %}
 					{% assign author = site.authors[page.author] %}
 					{% if page.author %} 
-						<p class="badge pull-right">by {% if author.github %}<a href="https://github.com/{{ author.github }}/">{% endif %}{{ author.display_name }}{% if author.github %}</a>{% endif %}
-					{% endif %}
-					{% if page.hattip %} 
-						({{ page.hattip }})
-					{% endif %}
-					{% if page.author %}
-						</p>
+						<p class="badge pull-right">by {% if author.github %}<a href="https://github.com/{{ author.github }}/">{% endif %}{{ author.display_name }}{% if author.github %}</a>{% endif %}</p>
 					{% endif %}
