More editing sidebar
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,6 +15,7 @@
 								<li><a href="declare_permissions.html">Permissons Declaration</a></li>
 								<li><a href="tut_context_menus.html">Working with the context menu</a></li>
 								<li><a href="tut_sd_extensions.html">Speed Dial extensions</a></li>
+								<li><a href="tut_history.html">Working with the browser history</a></li>
 								<li><a href="tut_internationalization.html">Internationalization</a></li>
 								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
 								<li><a href="tut_conversion.html">Converting OEX extensions to CRX/NEX</a></li>
@@ -31,8 +32,10 @@
 								<li><a href="pageAction.html">chrome.pageAction</a></li>
 								<li><a href="browserAction.html">chrome.browserAction</a></li>
 								<li><a href="contextMenus.html">chrome.contextMenus</a></li>
+								<li><a href="cookies.html">chrome.cookies</a></li>
 								<li><a href="events.html">chrome.events</a></li>
 								<li><a href="extension.html">chrome.extension</a></li>
+								<li><a href="history.html">chrome.history</a></li>
 								<li><a href="i18n.html">chrome.i18n</a></li>
 								<li><a href="idle.html">chrome.idle</a></li>
 								<li><a href="management.html">chrome.management</a></li>
