added npapi tutorial

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,6 +17,7 @@
 								<li><a href="tut_sd_extensions.html">Speed Dial extensions</a></li>
 								<li><a href="tut_history.html">Working with the browser history</a></li>
 								<li><a href="tut_internationalization.html">Internationalization</a></li>
+								<li><a href="tut_npapi.html">NPAPI Plugins</a></li>
 								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
 								<li><a href="tut_conversion.html">Converting OEX extensions to CRX/NEX</a></li>
 								<li><a href="tut_icons.html">Icons</a></li>
