change of tut_history file name to bypass sidebar highlight issue

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -15,7 +15,7 @@
 								<li><a href="declare_permissions.html">Permissons Declarations</a></li>
 								<li><a href="tut_context_menus.html">Working with the context menu</a></li>
 								<li><a href="tut_sd_extensions.html">Speed Dial extensions</a></li>
-								<li><a href="tut_history.html">Working with the browser history</a></li>
+								<li><a href="tut_hist.html">Working with the browser history</a></li>
 								<li><a href="tut_internationalization.html">Internationalization</a></li>
 								<li><a href="tut_npapi.html">NPAPI Plugins</a></li>
 								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
