--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,7 @@
 								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
 								<li><a href="tut_conversion.html">Converting OEX extensions to CRX/NEX</a></li>
 								<li><a href="tut_icons.html">Icons</a></li>
-								<li><a href="tut_extension_templates.html">Extension templates and samples</a></li>
+								<li><a href="tut_extension_samples.html">Extension templates and samples</a></li>
 								<!--<li><a href="tut_publishing_new_version.html">Publishing a new version</a></li>-->
 								<li><a href="tut_publishing_guidelines.html">Publishing guidelines</a></li>
 							</ul>
