added bookmarks api docs

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,6 +16,7 @@
 								<li><a href="tut_context_menus.html">Working with the context menu</a></li>
 								<li><a href="tut_sd_extensions.html">Speed Dial extensions</a></li>
 								<li><a href="tut_hist.html">Working with the browser history</a></li>
+								<li><a href="tut_bookmarks.html">Working with bookmarks</a></li>
 								<li><a href="tut_internationalization.html">Internationalization</a></li>
 								<li><a href="tut_npapi.html">NPAPI Plugins</a></li>
 								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
@@ -38,6 +39,7 @@
 								<li><a href="events.html">chrome.events</a></li>
 								<li><a href="extension.html">chrome.extension</a></li>
 								<li><a href="history.html">chrome.history</a></li>
+								<li><a href="bookmarks.html">chrome.bookmarks</a></li>
 								<li><a href="i18n.html">chrome.i18n</a></li>
 								<li><a href="idle.html">chrome.idle</a></li>
 								<li><a href="management.html">chrome.management</a></li>
