added references to new docs in sidebar, removed some stuff from architecture overview

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,13 +17,13 @@
 								<li><a href="tut_sd_extensions.html">Speed Dial extensions</a></li>
 								<li><a href="tut_hist.html">Working with the browser history</a></li>
 								<li><a href="tut_bookmarks.html">Working with bookmarks</a></li>
+								<li><a href="tut_commands.html">Adding keyboard shortcuts</a></li>
 								<li><a href="tut_internationalization.html">Internationalization</a></li>
 								<li><a href="tut_npapi.html">NPAPI Plugins</a></li>
 								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
 								<li><a href="tut_conversion.html">Converting OEX extensions to CRX/NEX</a></li>
-								<li><a href="tut_icons.html">Icons</a></li>
+								<li><a href="tut_icons.html">Creating effective icons</a></li>
 								<li><a href="tut_extension_samples.html">Extension templates and samples</a></li>
-								<!--<li><a href="tut_publishing_new_version.html">Publishing a new version</a></li>-->
 								<li><a href="tut_publishing_guidelines.html">Publishing guidelines</a></li>
 							</ul>
 						</li>
@@ -32,17 +32,18 @@
 							<ul class="nav nav-list">
 								<li><a href="manifest.html">Formats: Manifest Files</a></li>
 								<li><a href="alarms.html">chrome.alarms</a></li>
-								<li><a href="pageAction.html">chrome.pageAction</a></li>
+								<li><a href="bookmarks.html">chrome.bookmarks</a></li>
 								<li><a href="browserAction.html">chrome.browserAction</a></li>
 								<li><a href="contextMenus.html">chrome.contextMenus</a></li>
+								<li><a href="commands.html">chrome.commands</a></li>
 								<li><a href="cookies.html">chrome.cookies</a></li>
 								<li><a href="events.html">chrome.events</a></li>
 								<li><a href="extension.html">chrome.extension</a></li>
 								<li><a href="history.html">chrome.history</a></li>
-								<li><a href="bookmarks.html">chrome.bookmarks</a></li>
 								<li><a href="i18n.html">chrome.i18n</a></li>
 								<li><a href="idle.html">chrome.idle</a></li>
 								<li><a href="management.html">chrome.management</a></li>
+								<li><a href="pageAction.html">chrome.pageAction</a></li>
 								<li><a href="runtime.html">chrome.runtime</a></li>
 								<li><a href="storage.html">chrome.storage</a></li>
 								<li><a href="tabs.html">chrome.tabs</a></li>
