--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,12 +12,13 @@
 								<li><a href="tut_tab_window.html">Working with tabs and windows</a></li>
 								<li><a href="tut_content_scripts.html">Content scripts</a></li>
 								<li><a href="tut_match_patterns.html">Match patterns</a></li>
-								<li><a href="declare_permissions.html">Permissons Declarations</a></li>
+								<li><a href="tut_declare_permissions.html">Permissons Declarations</a></li>
 								<li><a href="tut_context_menus.html">Working with the context menu</a></li>
 								<li><a href="tut_sd_extensions.html">Speed Dial extensions</a></li>
 								<li><a href="tut_hist.html">Working with the browser history</a></li>
 								<li><a href="tut_bookmarks.html">Working with bookmarks</a></li>
 								<li><a href="tut_commands.html">Adding keyboard shortcuts</a></li>
+								<li><a href="tut_webnavigation.html">Using webNavigation</a></li>
 								<li><a href="tut_internationalization.html">Internationalization</a></li>
 								<li><a href="tut_npapi.html">NPAPI Plugins</a></li>
 								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
@@ -47,6 +48,7 @@
 								<li><a href="runtime.html">chrome.runtime</a></li>
 								<li><a href="storage.html">chrome.storage</a></li>
 								<li><a href="tabs.html">chrome.tabs</a></li>
+								<li><a href="webNavigation.html">chrome.webNavigation</a></li>
 								<li><a href="webRequest.html">chrome.webRequest</a></li>
 								<li><a href="windows.html">chrome.windows</a></li>
 								<li><a href="speeddial.html">opr.speeddial</a></li>
