--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -52,6 +52,7 @@
 								<li><a href="webRequest.html">chrome.webRequest</a></li>
 								<li><a href="windows.html">chrome.windows</a></li>
 								<li><a href="speeddial.html">opr.speeddial</a></li>
+								<li><a href="stash.html">opr.stash</a></li>
 							</ul>
 						</li>
 					</ul>
