--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -35,19 +35,29 @@
 								<li><a href="alarms.html">chrome.alarms</a></li>
 								<li><a href="bookmarks.html">chrome.bookmarks</a></li>
 								<li><a href="browserAction.html">chrome.browserAction</a></li>
+								<li><a href="browsingData.html">chrome.browsingData</a></li>
 								<li><a href="contextMenus.html">chrome.contextMenus</a></li>
 								<li><a href="commands.html">chrome.commands</a></li>
+								<li><a href="contentSettings.html">chrome.contentSettings</a></li>
 								<li><a href="cookies.html">chrome.cookies</a></li>
+								<li><a href="devtools_inspectedWindow.html">chrome.devtools.inspectedWindow</a></li>
+								<li><a href="devtools_network.html">chrome.devtools.network</a></li>
+								<li><a href="devtools_panels.html">chrome.devtools.panels</a></li>								
 								<li><a href="events.html">chrome.events</a></li>
 								<li><a href="extension.html">chrome.extension</a></li>
 								<li><a href="history.html">chrome.history</a></li>
 								<li><a href="i18n.html">chrome.i18n</a></li>
 								<li><a href="idle.html">chrome.idle</a></li>
 								<li><a href="management.html">chrome.management</a></li>
+								<li><a href="omnibox.html">chrome.omnibox</a></li>
 								<li><a href="pageAction.html">chrome.pageAction</a></li>
+								<li><a href="pageCapture.html">chrome.pageCapture</a></li>
+								<li><a href="permissions.html">chrome.permissions</a></li>
+								<li><a href="privacy.html">chrome.privacy</a></li>
 								<li><a href="runtime.html">chrome.runtime</a></li>
 								<li><a href="storage.html">chrome.storage</a></li>
 								<li><a href="tabs.html">chrome.tabs</a></li>
+								<li><a href="types.html">chrome.types</a></li>
 								<li><a href="webNavigation.html">chrome.webNavigation</a></li>
 								<li><a href="webRequest.html">chrome.webRequest</a></li>
 								<li><a href="windows.html">chrome.windows</a></li>
