--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,8 @@
 								<li><a href="tut_tab_window.html">Working with tabs and windows</a></li>
 								<li><a href="tut_content_scripts.html">Content scripts</a></li>
 								<li><a href="tut_match_patterns.html">Match patterns</a></li>
-								<li><a href="declare_permissions.html">Permissons Declarations</a></li>
+								<li><a href="declare_permissions.html">Permissons declarations</a></li>
+								<li><a href="tut_optional_permissions.html">Optional permissions</a>
 								<li><a href="tut_context_menus.html">Working with the context menu</a></li>
 								<li><a href="tut_sd_extensions.html">Speed Dial extensions</a></li>
 								<li><a href="tut_hist.html">Working with the browser history</a></li>
