--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -17,6 +17,7 @@
 								<li><a href="tut_context_menus.html">Working with the context menu</a></li>
 								<li><a href="tut_sd_extensions.html">Speed Dial extensions</a></li>
 								<li><a href="tut_hist.html">Working with the browser history</a></li>
+								<li><a href="tut_removingbrowsingdata.html">Removing browsing data</a></li>
 								<li><a href="tut_bookmarks.html">Working with bookmarks</a></li>
 								<li><a href="tut_commands.html">Adding keyboard shortcuts</a></li>
 								<li><a href="tut_webnavigation.html">Using webNavigation</a></li>
@@ -37,9 +38,9 @@
 								<li><a href="bookmarks.html">chrome.bookmarks</a></li>
 								<li><a href="browserAction.html">chrome.browserAction</a></li>
 								<li><a href="browsingData.html">chrome.browsingData</a></li>
-								<li><a href="contextMenus.html">chrome.contextMenus</a></li>
 								<li><a href="commands.html">chrome.commands</a></li>
 								<li><a href="contentSettings.html">chrome.contentSettings</a></li>
+								<li><a href="contextMenus.html">chrome.contextMenus</a></li>
 								<li><a href="cookies.html">chrome.cookies</a></li>
 								<li><a href="devtools_inspectedWindow.html">chrome.devtools.inspectedWindow</a></li>
 								<li><a href="devtools_network.html">chrome.devtools.network</a></li>
