--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,7 +18,9 @@
 								<li><a href="tut_sd_extensions.html">Speed Dial extensions</a></li>
 								<li><a href="tut_hist.html">Working with the browser history</a></li>
 								<li><a href="tut_removing_browsingdata.html">Removing browsing data</a></li>
+								<li><a href="tut_privacy.html">Controlling privacy features</a></li>
 								<li><a href="tut_bookmarks.html">Working with bookmarks</a></li>
+								<li><a href="tut_omnibox.html">Creating address bar extensions</a></li>
 								<li><a href="tut_commands.html">Adding keyboard shortcuts</a></li>
 								<li><a href="tut_webnavigation.html">Using webNavigation</a></li>
 								<li><a href="tut_internationalization.html">Internationalization</a></li>
