contentSettings tutorial and API cleanup

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,11 +16,12 @@
 								<li><a href="tut_optional_permissions.html">Optional permissions</a>
 								<li><a href="tut_context_menus.html">Working with the context menu</a></li>
 								<li><a href="tut_sd_extensions.html">Speed Dial extensions</a></li>
+								<li><a href="tut_bookmarks.html">Working with bookmarks</a></li>
 								<li><a href="tut_hist.html">Working with the browser history</a></li>
 								<li><a href="tut_removing_browsingdata.html">Removing browsing data</a></li>
 								<li><a href="tut_privacy.html">Controlling privacy features</a></li>
-								<li><a href="tut_bookmarks.html">Working with bookmarks</a></li>
 								<li><a href="tut_omnibox.html">Creating address bar extensions</a></li>
+								<li><a href="tut_contentsettings.html">Site-specific customization</a></li>
 								<li><a href="tut_commands.html">Adding keyboard shortcuts</a></li>
 								<li><a href="tut_webnavigation.html">Using webNavigation</a></li>
 								<li><a href="tut_internationalization.html">Internationalization</a></li>
