various devtool API guides cleanup

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -26,6 +26,7 @@
 								<li><a href="tut_webnavigation.html">Using webNavigation</a></li>
 								<li><a href="tut_internationalization.html">Internationalization</a></li>
 								<li><a href="tut_npapi.html">NPAPI Plugins</a></li>
+								<li><a href="devtools.html">Extending DevTools</a></li>
 								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
 								<li><a href="tut_conversion.html">Converting OEX extensions to CRX/NEX</a></li>
 								<li><a href="tut_icons.html">Creating effective icons</a></li>
@@ -45,9 +46,9 @@
 								<li><a href="contentSettings.html">chrome.contentSettings</a></li>
 								<li><a href="contextMenus.html">chrome.contextMenus</a></li>
 								<li><a href="cookies.html">chrome.cookies</a></li>
-								<li><a href="devtools_inspectedWindow.html">chrome.devtools.inspectedWindow</a></li>
-								<li><a href="devtools_network.html">chrome.devtools.network</a></li>
-								<li><a href="devtools_panels.html">chrome.devtools.panels</a></li>								
+								<li><a href="devtools.inspectedWindow.html">chrome.devtools.inspectedWindow</a></li>
+								<li><a href="devtools.network.html">chrome.devtools.network</a></li>
+								<li><a href="devtools.panels.html">chrome.devtools.panels</a></li>								
 								<li><a href="events.html">chrome.events</a></li>
 								<li><a href="extension.html">chrome.extension</a></li>
 								<li><a href="history.html">chrome.history</a></li>
