minor changes to types API, offroad tutorial

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -24,6 +24,7 @@
 								<li><a href="tut_contentsettings.html">Site-specific customization</a></li>
 								<li><a href="tut_commands.html">Adding keyboard shortcuts</a></li>
 								<li><a href="tut_webnavigation.html">Using webNavigation</a></li>
+								<li><a href="tut_offroad.html">Working with Off-Road Mode</a></li>
 								<li><a href="tut_internationalization.html">Internationalization</a></li>
 								<li><a href="tut_npapi.html">NPAPI Plugins</a></li>
 								<li><a href="devtools.html">Extending DevTools</a></li>
