Changes in the sidebar to reflect new articles and docs
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -25,6 +25,7 @@
 								<li><a href="tut_contentsettings.html">Site-specific customization</a></li>
 								<li><a href="tut_commands.html">Adding keyboard shortcuts</a></li>
 								<li><a href="tut_webnavigation.html">Using webNavigation</a></li>
+								<li><a href="tut_proxy.html">Using the Proxy API</a></li>
 								<li><a href="tut_offroad.html">Working with Off-Road Mode</a></li>
 								<li><a href="tut_internationalization.html">Internationalization</a></li>
 								<li><a href="devtools.html">Extending DevTools</a></li>
@@ -53,15 +54,19 @@
 								<li><a href="downloads.html">chrome.downloads</a></li>								
 								<li><a href="events.html">chrome.events</a></li>
 								<li><a href="extension.html">chrome.extension</a></li>
+								<li><a href="fontSettings.html">chrome.fontSettings</a></li>
 								<li><a href="history.html">chrome.history</a></li>
 								<li><a href="i18n.html">chrome.i18n</a></li>
+								<li><a href="identity.html">chrome.identity</a></li>
 								<li><a href="idle.html">chrome.idle</a></li>
 								<li><a href="management.html">chrome.management</a></li>
 								<li><a href="omnibox.html">chrome.omnibox</a></li>
 								<li><a href="pageAction.html">chrome.pageAction</a></li>
 								<li><a href="pageCapture.html">chrome.pageCapture</a></li>
 								<li><a href="permissions.html">chrome.permissions</a></li>
+								<li><a href="power.html">chrome.power</a></li>
 								<li><a href="privacy.html">chrome.privacy</a></li>
+								<li><a href="proxy.html">chrome.proxy</a></li>
 								<li><a href="runtime.html">chrome.runtime</a></li>
 								<li><a href="storage.html">chrome.storage</a></li>
 								<li><a href="tabs.html">chrome.tabs</a></li>
