Including system.storage in the sidebar
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -69,6 +69,7 @@
 								<li><a href="proxy.html">chrome.proxy</a></li>
 								<li><a href="runtime.html">chrome.runtime</a></li>
 								<li><a href="storage.html">chrome.storage</a></li>
+								<li><a href="systemstorage.html">chrome.system.storage</a></li>
 								<li><a href="tabs.html">chrome.tabs</a></li>
 								<li><a href="types.html">chrome.types</a></li>
 								<li><a href="webNavigation.html">chrome.webNavigation</a></li>
