addition of inline installation tut and API doc to sidebar
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,6 +28,7 @@
 								<li><a href="tut_proxy.html">Using the Proxy API</a></li>
 								<li><a href="tut_offroad.html">Working with Off-Road Mode</a></li>
 								<li><a href="tut_internationalization.html">Internationalization</a></li>
+								<li><a href="tut_inline_installation.html">Inline installation of extensions</a></li>
 								<li><a href="devtools.html">Extending DevTools</a></li>
 								<li><a href="tut_testing.html">Testing and debugging your extensions</a></li>
 								<li><a href="tut_conversion.html">Converting OEX extensions to CRX/NEX</a></li>
@@ -75,6 +76,7 @@
 								<li><a href="webNavigation.html">chrome.webNavigation</a></li>
 								<li><a href="webRequest.html">chrome.webRequest</a></li>
 								<li><a href="windows.html">chrome.windows</a></li>
+								<li><a href="addons.html">opr.addons</a></li>
 								<li><a href="speeddial.html">opr.speeddial</a></li>
 								<li><a href="stash.html">opr.stash</a></li>
 							</ul>
