added link to Chromium extension API docs in sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -42,6 +42,7 @@
 								<li><a href="manifest.html">Formats: Manifest Files</a></li>
 								<li><a href="addons.html">opr.addons</a></li>
 								<li><a href="speeddial.html">opr.speeddial</a></li>
+								<li><a href="https://developer.chrome.com/extensions/api_index">Chromium extension APIs (external link)</a></li>
 							</ul>
 						</li>
 					</ul>
