--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -40,9 +40,9 @@
 							<h2 class="nav-header">API Docs</h2>
 							<ul class="nav nav-list">
 								<li><a href="manifest.html">Formats: Manifest Files</a></li>
+								<li><a href="apis.html">Supported extension APIs</a></li>
 								<li><a href="addons.html">opr.addons</a></li>
 								<li><a href="speeddial.html">opr.speeddial</a></li>
-								<li><a href="https://developer.chrome.com/extensions/api_index">Chromium extension APIs (external link)</a></li>
 							</ul>
 						</li>
 					</ul>
