Added sidebar doc to navigation
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -43,6 +43,7 @@
 								<li><a href="apis.html">Supported extension APIs</a></li>
 								<li><a href="addons.html">opr.addons</a></li>
 								<li><a href="speeddial.html">opr.speeddial</a></li>
+								<li><a href="sidebarAction.html">opr.sidebarAction</a></li>
 							</ul>
 						</li>
 					</ul>
