Added link in the navigation menu
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,6 +9,7 @@
 								<li><a href="tut_basics.html">The basics of making an extension</a></li>
 								<li><a href="tut_browser_actions.html">Buttons, popups and badges (browser actions)</a></li>
 								<li><a href="tut_message_passing.html">Passing messages in extensions</a></li>
+								<li><a href="tut_sidebar_actions.html">Creating extensions for the sidebar</a></li>
 								<li><a href="tut_tab_window.html">Working with tabs and windows</a></li>
 								<li><a href="tut_content_scripts.html">Content scripts</a></li>
 								<li><a href="tut_match_patterns.html">Match patterns</a></li>
