Replaced Opera 15+ with just Opera
Signed-off-by: Shwetank Dixit <emailshwetank@gmail.com>

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>{{ page.title }} - Opera 15+ extensions documentation</title>
+		<title>{{ page.title }} - Opera extensions documentation</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link href="//netdna.bootstrapcdn.com/bootswatch/2.3.2/cosmo/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="brand" href="index.html">Opera 15+ extensions documentation</a>
+						<a class="brand" href="index.html">Opera extensions documentation</a>
 						<div class="nav-collapse collapse">
 							<ul class="nav">
 								<li><a href="contact.html">Contact</a></li>
